--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -16,6 +16,7 @@
         </activity>
 
         <activity android:name=".howto"/>
+        <activity android:name=".About"/>
     </application>
 
 </manifest>
