update sounds on buttons

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -17,7 +17,7 @@
         </activity>
         <activity android:name=".howto" />
         <activity android:name=".GameActivity" />
-        <activity android:name=".About"></activity>
+        <activity android:name=".About"/>
     </application>
 
 </manifest>
